Added SecurityConfig, Fixed DashboardController.java, update to support CORS for index.html, fixed background image in adminDashboard.css

--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>Select Role</title>
     <link rel="icon" href="../assets/images/logo/Logo.png">
     <link rel="stylesheet" href="../assets/css/index.css">
