--- a/app/src/main/resources/static/pages/patientDashboard.html
+++ b/app/src/main/resources/static/pages/patientDashboard.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="../assets/images/logo/logo.png" />
+    <link rel="icon" href="../assets/images/logo/logo.png" />
     <title>PatientDashboard</title>
     <link rel="stylesheet" href="../assets/css/adminDashboard.css" />
     <link rel="stylesheet" href="../assets/css/style.css" />
