--- a/app/src/main/resources/static/pages/patientDashboard.html
+++ b/app/src/main/resources/static/pages/patientDashboard.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../assets/css/patientDashboard.css" />
     <script src="../js/render.js" defer></script>
     <script src="../js/util.js" defer></script>
-    <script src="../js/components/header.js" defer></script>
-    <script src="../js/components/footer.js" defer></script>
+    <script type="module" src="../js/components/header.js" defer></script>
+    <script type="module" src="../js/components/footer.js" defer></script>
     <script type="module" src="../js/components/modals.js"></script>
 </head>
 
