Updated pages for lint check. Switch to local environment.

--- a/app/src/main/resources/static/pages/loggedPatientDashboard.html
+++ b/app/src/main/resources/static/pages/loggedPatientDashboard.html
@@ -1,5 +1,4 @@
-<!-- loggedPatientDashboard.html -->
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- loggedPatientDashboard.html -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
