--- a/app/src/main/resources/static/pages/patientRecord.html
+++ b/app/src/main/resources/static/pages/patientRecord.html
@@ -1,6 +1,5 @@
-<!-- patientRecord.html -->
-<!-- for doctor to see patient details -->
-<!DOCTYPE html>
+
+<!DOCTYPE html> <!-- patientRecord.html: for doctor to see patient details -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
