Fixed logged patient dashboard

--- a/app/src/main/resources/static/pages/loggedPatientDashboard.html
+++ b/app/src/main/resources/static/pages/loggedPatientDashboard.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="../assets/images/logo/logo.png" />
+    <link rel="icon" href="../assets/images/logo/logo.png" />
     <title>LoggedPatientDashboard</title>
-    <link rel = "stylesheet" href = "../assets/css/adminDashboard.css">
-    <link rel = "stylesheet" href = "../assets/css/style.css">
-    <link rel = "stylesheet" href = "../assets/css/patientDashboard.css">
-    <script src = "../js/render.js" defer></script>
-    <script src = "../js/util.js" defer></script>
-    <script src = "../js/components/header.js" defer></script>
-    <script src = "../js/components/footer.js" defer></script>
-    <script type = "module" src = "../js/loggedPatient.js" defer></script>
+    <link rel="stylesheet" href="../assets/css/adminDashboard.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/patientDashboard.css" />
+    <script src="../js/render.js" defer></script>
+    <script src="../js/util.js" defer></script>
+    <script type="module" src="../js/components/header.js" defer></script>
+    <script type="module" src="../js/components/footer.js" defer></script>
+    <script type="module" src="../js/components/modals.js"></script>
+    <script type="module" src="../js/loggedPatient.js" defer></script>
 </head>
 <body onload="renderContent()">
     <div class="container">
