Update patient appointments view

--- a/app/src/main/resources/static/pages/patientAppointments.html
+++ b/app/src/main/resources/static/pages/patientAppointments.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/svg+xml" href="../assets/images/logo/logo.png" />
+  <link rel="icon" href="../assets/images/logo/logo.png" />
   <title>Patient Appointments</title>
   <link rel="stylesheet" href="../assets/css/adminDashboard.css">
   <link rel="stylesheet" href="../assets/css/doctorDashboard.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <script src="../js/render.js" defer></script>
   <script src="../js/util.js" defer></script>
-  <script src="../js/components/header.js" defer></script>
-  <script src="../js/components/footer.js" defer></script>
+  <script type="module" src="../js/components/header.js" defer></script>
+  <script type="module" src="../js/components/footer.js" defer></script>
   <script type="module" src="../js/patientAppointment.js" defer></script>
 </head>
 
